Gradle-ify projects; split into demo and library.
Note: modelling the library as an Android library project, but a normal jar would work fine since we do not currently have any resources. Library project is a lot easier to get working.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
-bin
-gen
-.project
+bin/
+gen/
+.settings
+target/
+build/
+local.properties
+.gradle
+*.iml
+.idea
 .classpath
-target
+.project
+
+*.DS_Store
