--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      android:versionCode="1"
-      android:versionName="1.0" package="com.antonyt.infiniteviewpager">
-    <uses-sdk android:minSdkVersion="4" />
+  package="com.antonyt.infiniteviewpager">
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".InfiniteViewPagerActivity"
+        <activity android:name="com.antonyt.infiniteviewpager.InfiniteViewPagerActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
